terraform/networking.tf
# VPC
resource "aws_vpc" "mj_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "MjVpc"
  }
}

# Subnet
resource "aws_subnet" "mj_subnet" {
  vpc_id                  = aws_vpc.mj_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name = "MjPublicSubnet"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "mj_igw" {
  vpc_id = aws_vpc.mj_vpc.id
  tags = {
    Name = "MjIgw"
  }
}

# Route Table
resource "aws_route_table" "mj_route_table" {
  vpc_id = aws_vpc.mj_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.mj_igw.id
  }
  tags = {
    Name = "MjPublicRouteTable"
  }
}

resource "aws_route_table_association" "mj_route_table_association" {
  subnet_id      = aws_subnet.mj_subnet.id
  route_table_id = aws_route_table.mj_route_table.id
}

# Cloudflare
resource "cloudflare_dns_record" "mj_ec2_dns_record" {
  zone_id = var.cloudflare_zone_id
  name    = var.domain
  type    = "A"
  content = aws_instance.mj_ec2.public_ip
  ttl     = 1
  proxied = true
}
